--- a/CobroCoactivo/web/paginas/gestionPersonas/gestionPersona.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPersonas/gestionPersona.xhtml
@@ -15,8 +15,8 @@
                     <div class="content-wrapper">
                         <section class="content-header">
                             <h1>
-                                Consultas
-                                <small>guia formulario para consultas</small>
+                                Consultas y adicionar personas
+                               <!-- <small>guia formulario para consultas</small> -->
                             </h1>
                             <ol class="breadcrumb">
                                 <li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
@@ -60,7 +60,7 @@
                                                             </div>
                                                             <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12">
                                                                 <div class="input-group margin-5">
-                                                                    <input placeholder="Ingrese el documento" type="text" class="form-control" maxlength="10" jsf:id="txtNumero" jsf:value="#{gestionPersonaBean.documentoPersona}" jsf:required="true" jsf:requiredMessage="Digite el numero de documento"></input>
+                                                                    <input placeholder="Ingrese el documento" type="text" class="form-control text-uppercase" maxlength="10" jsf:id="txtNumero" jsf:value="#{gestionPersonaBean.documentoPersona}" jsf:required="true" jsf:requiredMessage="Digite el numero de documento"></input>
                                                                     <span class="input-group-btn">
                                                                         <h:commandLink class="btn btn-info btn-danger" value="Buscar" >
                                                                             <f:ajax event="click" execute="frmPersonas:sltDocumentos frmPersonas:txtNumero" listener="#{gestionPersonaBean.buscarPersona(1)}" render="frmPersonas:tblPersona" ></f:ajax>
@@ -133,7 +133,7 @@
                                     </div>
                                 </div>
                                 <h:panelGroup id="tblPersona">
-                                    <table class="table table-bordered">
+                                    <table class="table table-hover">
                                         <div class="row">
                                             <thead>
                                                 <tr>
