--- a/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
@@ -5,7 +5,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:jsf="http://xmlns.jcp.org/jsf">
     <h:body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
@@ -13,6 +14,7 @@
                     <div class="content-wrapper">
                         <h:outputText value="#{gestionUsuariosBean.encabezadoDetalleUsuario}" escape="false"></h:outputText>
                         <section class="content">
+
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="box box-danger">
@@ -111,21 +113,26 @@
                                                     <div class="box-body no-padding">
                                                         <div id="accordion">
                                                             <div class="panel-group">
-                                                                <c:forEach items="#{gestionUsuariosBean.listModulos}" var="listaModulos">
+                                                                <c:forEach items="#{gestionUsuariosBean.listTodosModulos}" var="listaTodosModulos">
                                                                     <div class="panel panel-default">
-                                                                        <div class="panel-heading" id="heading#{listaModulos.modId}">
-                                                                            <h4 class="panel-title row">
-                                                                                <div class="col-sm-11">
-                                                                                    <a class="cursor" data-toggle="collapse" data-target="#collapse#{listaModulos.modId}" aria-controls="collapse#{listaModulos.modId}">#{listaModulos.modNombre}</a>
-                                                                                    <span class="badge badge-pill badge-primary">#{listaModulos.listRecurso.size()}</span>
+                                                                        <div class="panel-heading" id="heading#{listaTodosModulos.modId}">
+                                                                            <h4 class="panel-title ">
+                                                                                <div class="row" >
+                                                                                    <a class="cursor col-lg-11" data-toggle="collapse" data-target="#collapse#{listaTodosModulos.modId}" aria-controls="collapse#{listaTodosModulos.modId}">#{listaTodosModulos.modNombre} <span class="badge badge-pill badge-primary ">#{listaTodosModulos.listRecurso.size()}</span></a>
+                                                                                    <h:commandLink class="fa fa-plus col-lg-1" onclick="$('#modalRecursoModulos').modal('show')">
+                                                                                        <f:ajax event="click" listener="#{gestionUsuariosBean.cargarRecursoByModulo(listaTodosModulos.modId)}" render="frmDetalleUsuario:modalBodyAgregarRecurso"/>
+                                                                                    </h:commandLink>
                                                                                 </div>
                                                                             </h4>
                                                                         </div>
-                                                                        <div id="collapse#{listaModulos.modId}" aria-labelledby="heading#{tabla1}" data-parent="#accordion" class="collapse">
-                                                                            <c:forEach items="#{listaModulos.listRecurso}" var="listaRecurso">
-                                                                                <p>
-                                                                                    #{listaRecurso.recNombre}
-                                                                                </p>                                                                                
+                                                                        <div id="collapse#{listaTodosModulos.modId}" aria-labelledby="heading#{tabla1}" data-parent="#accordion" class="panel-collapse collapse">
+                                                                            <c:forEach items="#{listaTodosModulos.listRecurso}" var="listaRecurso">
+                                                                                <ul class="list-group">
+                                                                                    <p:selectBooleanCheckbox value="#{listaRecurso.selecionado}">
+                                                                                        <f:ajax event="change"  render="frmDetalleUsuario:"></f:ajax>
+                                                                                    </p:selectBooleanCheckbox>
+                                                                                    <li class="list-group-item">#{listaRecurso.recNombre}</li> 
+                                                                                </ul>
                                                                             </c:forEach>
                                                                         </div>
                                                                     </div>
@@ -186,6 +193,54 @@
                                             <h:commandLink value="Actualizar" id="btnGuardarContraseña" class="btn btn-success">
                                                 <f:ajax event="click" listener="#{gestionUsuariosBean.actualizarContraseña()}" execute="frmDetalleUsuario:txtPassActual frmDetalleUsuario:txtPassNueva frmDetalleUsuario:txtPassConfirmacionNueva" />
                                             </h:commandLink>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal fade" id="modalRecursoModulos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" >
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h5 class="modal-title" id="exampleModalLabel">Recurso del modulo</h5>
+                                        </div>
+                                        <div class="modal-body" jsf:id="modalBodyAgregarRecurso">
+                                            <table class="table table-hover">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Seleccionar</th>
+                                                        <th>Recursos</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <c:forEach items="#{gestionUsuariosBean.listRecursos}" var="listRecurso">
+                                                        <tr>
+                                                            <td><p:selectBooleanCheckbox value="#{listRecurso.selecionado}" required="true" requiredMessage="Debe selecionar algun recurso">
+                                                                    <f:ajax event="change"  render="frmDetalleUsuario:tablaDatosAdicionales"></f:ajax>
+                                                                </p:selectBooleanCheckbox>
+                                                            </td>
+                                                            <td>#{listRecurso.recNombre}</td>
+                                                        </tr>
+                                                    </c:forEach>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <div class="row"> 
+                                                <div class="col-lg-8"></div>
+                                                <div class="col-lg-2">
+                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                                </div>
+                                                <div class="col-lg-2">
+                                                    <h:panelGrid id="pnlGuardarRecurso">
+                                                        <h:panelGroup >
+                                                            <h:commandLink value="Guardar" id="btnGuardarRecurso" class="btn btn-success">
+                                                                <f:ajax event="click" listener="#{gestionUsuariosBean.guardarRecursoUsuario()}" execute="frmModalAgregarPersona:modalBodyAgregarRecurso" />
+                                                            </h:commandLink>
+                                                        </h:panelGroup>
+                                                    </h:panelGrid>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
